# FEA-Fastener-tool-

./: .gitignore  FEA Solver.py  Gmsh+FEniCS_FOS_Function.py  README.md  autobolt.yml  build123d-Parametric CAD Solver.py  build123d_function.py  cad_tool.yml  environment.yml  environments.yml  fea_tool.yml  pyproject.toml
.github/workflows/: test.yml
src/autobolt/: __init__.py  combined.py  fea_solver.py  parametric_cad_solver.py
tests/: test_everything.py
